src/test/resources/type/good/inference-1.ml
func test(x, int y) {
    return 1
}



