src/test/resources/type/bad/dupl-var.ml
int func main() {
    return 1
}

x = main()